--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step3/index.html
@@ -95,7 +95,7 @@
                 <span class="badge badge-warning">必須</span>
             </div>
             <div class="card-body">
-                <div class="mb-2" v-for="(item, i) of kafs05ModelStep3.overtimeHours" v-show="kafs05ModelStep3.prePostSelected == 1 || item.frameNo != 12">
+                <div class="mb-2" v-for="(item, i) of kafs05ModelStep3.overtimeHours">
                     <div class="row">
                         <div class="col-4">
                             <span class="small-header">{{item.frameName | i18n}}</span>
