--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step2/index.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-header">
                 <button class="btn btn-link" type="button">
-                    {{'KAF005_23' | i18n}}
+                    {{'KAFS05_41' | i18n}}
                 </button>
             </div>
             <div class="collapse">
@@ -11,9 +11,9 @@
                     <table class="table table-36">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">{{'KAF005_24' | i18n}}</th>
-                                <th scope="col">{{'KAF005_25' | i18n}}</th>
-                                <th scope="col">{{'KAF005_26' | i18n}}</th>
+                                <th scope="col">{{'KAFS_42' | i18n}}</th>
+                                <th scope="col">{{'KAFS_43' | i18n}}</th>
+                                <th scope="col">{{'KAFS_44' | i18n}}</th>
                             </tr>
                         </thead>
                         <tbody>
