--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step3/index.html
@@ -1,9 +1,9 @@
 <div class="kaf00503">
-    <div class="accordion border-bottom" v-if="kafs05ModelStep3.indicationOvertimeFlg">
+    <div class="accordion border-bottom" v-if="kafs05ModelStep2.indicationOvertimeFlg">
         <div class="card">
             <div class="card-header">
                 <button class="btn btn-link" type="button">
-                    {{'KAF005_23' | i18n}}
+                    {{'KAFS05_41' | i18n}}
                 </button>
             </div>
             <div class="collapse">
@@ -11,13 +11,13 @@
                     <table class="table table-36">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">{{'KAF005_24' | i18n}}</th>
-                                <th scope="col">{{'KAF005_25' | i18n}}</th>
-                                <th scope="col">{{'KAF005_26' | i18n}}</th>
+                                <th scope="col">{{'KAFS_42' | i18n}}</th>
+                                <th scope="col">{{'KAFS_43' | i18n}}</th>
+                                <th scope="col">{{'KAFS_44' | i18n}}</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="(item, i) of kafs05ModelStep3.overtimeWork">
+                            <tr v-for="(item, i) of kafs05ModelStep2.overtimeWork">
                                 <td :class="item.color">{{item.yearMonth}}</td>
                                 <td :class="item.color">{{item.limitTime | timedr}}</td>
                                 <td :class="item.color">{{item.actualTime | timedr}}</td>
