--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/components/step2/index.html
@@ -11,9 +11,9 @@
                     <table class="table table-36">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">{{'KAFS_42' | i18n}}</th>
-                                <th scope="col">{{'KAFS_43' | i18n}}</th>
-                                <th scope="col">{{'KAFS_44' | i18n}}</th>
+                                <th scope="col">{{'KAFS05_42' | i18n}}</th>
+                                <th scope="col">{{'KAFS05_43' | i18n}}</th>
+                                <th scope="col">{{'KAFS05_44' | i18n}}</th>
                             </tr>
                         </thead>
                         <tbody>
