--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
@@ -14,109 +14,11 @@
 		</div>
 
 		<div class="contents-area">
-			<div class="system_define">
-
-<!-- 				<div id="tab-panel" tabindex="2"
-					data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}">
-					<div class="tab-content-1 set_height">
-						<div class="fixed-flex-layout" id="panel1">
-							<div class="fixed-flex-layout-left">
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap" data-bind="ntsFormLabel: {
-													required: true, constraint: 'ShortName' }">#{i18n.getText('CMM007_97')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_company" tabindex="3"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_97]',
-													value: com_company,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_11')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_employment" tabindex="5"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_11]',
-													value: com_employment,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_12')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_class" tabindex="6"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_12]',
-													value: com_class,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_13')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_jobtitle" tabindex="7"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_13]',
-													value: com_jobtitle,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_14')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_department" tabindex="8"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_14]',
-													value: com_department,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_15')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_workplace" tabindex="9"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_15]',
-													value: com_workplace,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-								<div class="fixed-flex-layout">
-									<div class="fixed-flex-layout-left no-wrap"  data-bind="ntsFormLabel: {
-													constraint: 'ShortName', required: true }">#{i18n.getText('CMM007_16')}</div>
-									<div class="fixed-flex-layout-right">
-										<input id="com_office" tabindex="10"
-											data-bind="ntsTextEditor: {
-													name: '#[CMM007_16]',
-													value: com_office,
-													constraint: 'ShortName',
-													required: true,
-													option: {width: '130px'}}" />
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class = "ignite-grid">
+				<div style="height: 430px;">
+					<table id="hierarchicalGrid"></table>
 				</div>
- -->			</div>
+			</div>
 		</div>
 	</ui:composition>
 </body>
