--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/style.scss
@@ -4,11 +4,11 @@
     }
     .small-header{
         color: grey;
-        font-size: 13px;
+        font-size: 3.5vw;
     }
     .display-time{
         color: #406ccc;
-        font-size: 12px;
+        font-size: 3.5vw;
     }
     .display-time-exceed{
         color: #cc8b40;
