jinji thanhpv update move primitive value

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
@@ -13,8 +13,8 @@
 				nts.uk.ctx.hr.develop.dom.careermgmt.careerpath.YearType
 			</com:EnumScript>
 			<com:ValidatorScript>
-				nts.uk.ctx.hr.develop.dom.careermgmt.careerpath.String_Any_100
-				nts.uk.ctx.hr.develop.dom.careermgmt.careerpath.Integer_0_99
+				nts.uk.ctx.hr.shared.dom.primitiveValue.String_Any_100
+				nts.uk.ctx.hr.shared.dom.primitiveValue.Integer_0_99
 			</com:ValidatorScript>
 			<com:stylefile path="jhc002.b.style.css" />
 			<com:scriptfile path="jhc002.b.vm.js" />
