--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
@@ -9,9 +9,9 @@
 	<ui:composition template="../../../../master/sidebar.xhtml">
 		<ui:define name="sidebar-head">
 			<com:ValidatorScript>
-					nts.uk.ctx.hr.develop.dom.guidance.Integer_1_500
-					nts.uk.ctx.hr.develop.dom.careermgmt.careertype.Integer_1_5
-					nts.uk.ctx.hr.develop.dom.careermgmt.careertype.String_Any_20
+					nts.uk.ctx.hr.shared.dom.primitiveValue.Integer_1_500
+					nts.uk.ctx.hr.shared.dom.primitiveValue.Integer_1_5
+					nts.uk.ctx.hr.shared.dom.primitiveValue.String_Any_20
 			</com:ValidatorScript>
 
 			<com:scriptfile set="IGNITE" />
