--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
@@ -10,7 +10,7 @@
 			<com:scriptfile set="IGNITE" />
 			<script>var dialogSize = { width: 1000, height: 600 };</script>
 			<com:ValidatorScript>
-				nts.uk.ctx.hr.develop.dom.guidance.String_Any_1000
+				nts.uk.ctx.hr.shared.dom.primitiveValue.String_Any_100
 			</com:ValidatorScript>
 			<com:stylefile path="jmm017.c.style.css" />
 			<com:scriptfile path="jmm017.c.service.js" />
