JHC003 ThanhPV Update C screen

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
@@ -24,7 +24,7 @@
 			<div id="contents-area">
 				<div class="cf">
 					<div class="settings">
-						<div class="label" data-bind="text:screenName"></div>
+						<div class="ScreenName" data-bind="text:screenName"></div>
 					</div>
 					<div class="settings">
 						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_2')}</div>
