--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/jmm017.c.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/jmm017.c.style.css
@@ -5,7 +5,7 @@
 .cf .settings{
 	margin: 10px;
 }
-.cf .settings .label{
+.cf .settings .ScreenName{
 	margin-bottom: 20px;
 }
 .cf .inputTextarea {
