--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
@@ -20,15 +20,16 @@ table.info-table td.fix-width {width: 150px; background:#CFF1A5; padding:2px;}
 
 #contents-area{
 	margin-left: 15px;
+	overflow: hidden;
 }
 
-.limit-custom{
-	display: inline-block;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    width: 270px;
-} 
+div#contents-area {
+	overflow: hidden;
+}
+
+.htm {
+	overflow: hidden;
+}
 
 .open-dialog-i{
     position: absolute;
@@ -45,3 +46,16 @@ table.info-table td.fix-width {width: 150px; background:#CFF1A5; padding:2px;}
 	float : right;
 	margin-right: 25px;
 }
+
+.jumpButton{
+	display: inline-block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 270px;
+} 
+
+#master-wrapper div#contents-area {
+    overflow-y: hidden;
+}
+
