JHC003 ThanhPV Update B,A screen

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
@@ -67,7 +67,7 @@
 				<button tabindex="12" id="buttonCollapseAll" class="inline" >#{i18n.getText('JMM017_B422_15')}</button>
 			</div>
 			<div class="gridTableContent">
-				<div style="height: 430px;">
+				<div id="gridContent">
 					<table id="grid"></table>
 				</div>
 			</div>
