--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/013/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/013/a/index.xhtml
@@ -28,11 +28,11 @@
 			<button id="A1_4" tabindex="3"
 					data-bind="click: openBScreen">#{i18n.getText('QSI013_7')}</button>
 			<button id="A1_5" tabindex="4"
-					data-bind="">#{i18n.getText('QSI013_9')}</button>
+					data-bind="enable: false">#{i18n.getText('QSI013_9')}</button>
 			<button id="A1_6" tabindex="5"
-					data-bind="">#{i18n.getText('QSI013_10')}</button>
+					data-bind="enable: false">#{i18n.getText('QSI013_10')}</button>
 			<button id="A1_3" tabindex="6"
-					data-bind="">#{i18n.getText('QSI013_6')}</button>
+					data-bind="enable: false">#{i18n.getText('QSI013_6')}</button>
 		</div>
 
 		<div style="margin-top: 15px; min-width: 1000px;" class="contents-area fixed-flex-layout">
@@ -62,32 +62,191 @@
 							<span data-bind = "text: endDateJp" ></span>
 						</div>
 				</div>
+				<div class = "bottom" style="margin-top: 15px;margin-left: 50px;">
+						<table id="multi-list" data-bind="ntsGridList: {
+                    									height: 350,
+                    									options: items,
+														optionsValue: 'code',
+                    									columns: columns,
+                    									multiple: true,
+                    									value: currentCodeList
+                }"></table>
+				</div>
 			</div>
-			<div class="fixed-flex-layout-right">
-				<div class="panel panel-frame" style="width: 460px; height: 470px;">
+			<div class="fixed-flex-layout-right" data-bind="with: socInsurNotiCreSet">
+				<div class="panel panel-frame" style="width: 460px; height: 580px;">
+					<!--A222_12-->
 					<div class = "label"> #{i18n.getText('QSI013_15')}</div>
-					<div class="valign-center control-group">
+					<!--A222_13-->
+					<div class = "valign-center control-group">
 						<div data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_16')}</div>
+						<!--A222_14-->
 						<div id = "A4_4" data-bind="ntsDatePicker: {
 																name: '#{i18n.getText('QSI013_16')}',
-																value: filingDate,
+																value: $parent.filingDate,
 																dateFormat: 'YYYY/MM/DD',
 																valueFormat: 'YYYYMMDD',
 																required: true
 																}" tabindex="11"></div>
-						<span data-bind = "text: filingDateJp" ></span>
+						<!--A222_15-->
+						<span data-bind = "text: $parent.filingDateJp" ></span>
 					</div>
+
 					<div class="valign-center control-group">
+						<!--A222_16-->
 						<div data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_17')}</div>
-						<div id="A3_19" tabindex="18" class="cf" data-bind="ntsSwitchButton: {
-                                name: '#{i18n.getText('QMM007_29')}',
-                                options: targetClassification,
+						<!--A222_17-->
+							<div id="A3_19" tabindex="18" data-bind="ntsSwitchButton: {
+                                name: '#{i18n.getText('QSI013_17')}',
+                                options: $parent.rules,
                                 optionsValue: 'code',
                                 optionsText: 'name',
-                                value: selectedHourlyPay,
-                                required: required,
-                                enable: selectedId() == 1 &amp;&amp; enableSalary ? false : true  }"></div>
+                                value: submittedName,
+                                enable: true  }"></div>
+						<!--A222_20-->
+						<button data-bind="ntsHelpButton: {image: '../resources/QSI013_7.png', position: 'right top', enable: true }">?</button>
+					</div>
+					<!-- A4-->
+					<div class="valign-center control-group ">
+						<!--A222_21-->
+						<div id="A4_11" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_17')}</div>
+						<!--A222_22-->
+						<div id="A4_12" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_17')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: outputOrder,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true
+                        }"></div>
+					</div>
 
+					<div class="valign-center control-group">
+						<!--A222_24-->
+						<div id="A4_14" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_20')}</div>
+						<!--A222_25-->
+						<div id="A4_16" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_20')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: insuredNumber,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true
+                        }"></div>
+					</div>
+
+					<div class="valign-center control-group">
+						<!--A222_27-->
+						<div id="A4_17" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_21')}</div>
+						<!--A222_28-->
+						<div id="A4_19" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_21')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: businessArrSymbol,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true,
+                        }"></div>
+					</div>
+					<div class="valign-center control-group">
+						<!--A222_30-->
+						<div  data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_22')}</div>
+						<!--A222_31-->
+						<div data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_22')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: officeInformation,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true,
+                        }"></div>
+					</div>
+
+					<div style="border-bottom: 1px solid #bfb4b4;" class="control-group"><span class="label">#{i18n.getText('QSI013_26')}</span></div>
+					<div class="valign-center control-group ">
+						<!--A222_35-->
+						<div data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_23')}</div>
+						<div id="A5_5" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_23')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: printPersonNumber,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true
+                        }"></div>
+					</div>
+
+					<div style="border-bottom: 1px solid #bfb4b4;" class="control-group"><span class="label">#{i18n.getText('QSI013_24')}</span></div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_25')}</div>
+						<div id="A6_5" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_25')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: outputFormat,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true
+                        }"></div>
+						<button data-bind="ntsHelpButton: {image: 'QSI013Image02.png', position: 'right top', enable: true }">?</button>
+					</div>
+
+					<div class="valign-center control-group ">
+						<div data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_27')}</div>
+						<div id="A6_9" data-bind="ntsComboBox: {
+                        name: '#{i18n.getText('QSI013_27')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        visibleItemsCount: 5,
+                        value: textPersonNumber,
+                        optionsText: 'name',
+                        editable: true,
+                        enable: true,
+                        required: true,
+                        selectFirstIfNull: true,
+                        }"></div>
+
+					</div>
+
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_28')}</div>
+						<div class="cf" data-bind="ntsSwitchButton: {
+                        name: '#{i18n.getText('QSI013_28')}',
+                        options: $parent.rules,
+                        optionsValue: 'code',
+                        optionsText: 'name',
+                        value: lineFeedCode,
+                        required: true,
+                        enable: true }"></div>
+						<button data-bind="ntsHelpButton: {image: 'QSI013Image03.png', position: 'right top', enable: true }">?</button>
+					</div>
+
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {required:false}">#{i18n.getText('QSI013_32')}</div>
+						<input data-bind="ntsTextEditor: {value: fdNumber, name: '#{i18n.getText('QSI013_32')}'}" />
 					</div>
 				</div>
 			</div>
