JMM017 fix test chéo

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
@@ -28,6 +28,7 @@
 					<div class ="inline lable"><span>#{i18n.getText('JMM017_B422_4')}</span></div>
 					<div class ="inline">
 						<input  tabindex="6" data-bind="ntsTextEditor: {
+							name: '#{i18n.getText('JMM017_B422_5')}', 
 							value: eventName,
 							constraint: 'String_Any_20',
 							option: {width: '180px'}}" />
@@ -35,6 +36,7 @@
 					<div class ="inline lable"><span>#{i18n.getText('JMM017_B422_6')}</span></div>
 					<div class ="inline">
 						<input tabindex="7" data-bind="ntsTextEditor: {
+							name: '#{i18n.getText('JMM017_B422_7')}', 
 							value: programName,
 							constraint: 'String_Any_20',
 							option: {width: '180px'}}" />
@@ -44,6 +46,7 @@
 					<div class ="inline lable" style="min-width: 40px;"><span>#{i18n.getText('JMM017_B422_8')}</span></div>
 					<div class ="inline">
 						<input tabindex="8" data-bind="ntsTextEditor: {
+							name: '#{i18n.getText('JMM017_B422_9')}', 
 							value: screenName,
 							constraint: 'String_Any_20',
 							option: {width: '180px'}}" />
