--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
@@ -28,10 +28,10 @@
 					</div>
 					<div class="settings">
 						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_2')}</div>
-						<div tabindex="1" data-bind="ntsCheckBox: { checked: usageFlgByScreen }">#{i18n.getText('JMM017_C222_3')}</div>
+						<div tabindex="1" id="target" data-bind="ntsCheckBox: { checked: usageFlgByScreen }">#{i18n.getText('JMM017_C222_3')}</div>
 					</div>
 					<div class="settings">
-						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_3')}</div>
+						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_4')}</div>
 					</div>
 					<div class="settings">
 						<textarea class="inputTextarea" data-bind="ntsMultilineEditor: { 
