--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="card-body">
                 <v-errors v-model="$errors.kafs05ModelStep2.overtimeHours" class="d-block mt-0 mb-2" />
-                <div v-for="(item, i) of kafs05ModelStep2.overtimeHours">
+                <div v-for="(item, i) of kafs05ModelStep2.overtimeHours" v-show="!(kafs05ModelStep2.prePostSelected == 0 && item.frameNo == 12)">
                     <div class="row">
                         <div class="col-4">
                             <span class="small-header">{{item.frameName | i18n}}</span>
