--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
@@ -54,6 +54,7 @@
 							value: guideMsgAreaRow,
 							constraint: 'Integer_1_5',
 							required: true,
+							enable: usageFlgCommon,
 							option: {width: '15px'}}" />
 						<span style="margin-left: 40px">#{i18n.getText('JMM017_A422_5')}</span>
 					</div>
@@ -64,6 +65,7 @@
 							value: guideMsgMaxNum,
 							constraint: 'Integer_1_500',
 							required: true,
+							enable: usageFlgCommon,
 							option: {width: '30px'}}" />
 						<span style="margin-left: 26px">#{i18n.getText('JMM017_A422_8')}</span>
 					</div>
