--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/a/index.html
@@ -1,4 +1,4 @@
-<div class="kaf005" :key='key'>
+<div class="kaf005">
 
     <step-wizard v-bind:items="['step1', 'step2', 'step3', 'step4']" v-bind:selected="step" />
 
