[QSI001-ScreenB] Update code

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/001/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/001/a/index.xhtml
@@ -59,7 +59,7 @@
                 <table id="multi-list" data-bind="ntsGridList: {
                     height: 350,
                     options: items,
-                    optionsValue: 'code',
+                    optionsValue: 'id',
                     columns: columns,
                     multiple: true,
                     value: currentCodeList
