--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
@@ -28,6 +28,20 @@
             </div>
         </div>
     </div>
+    <div>
+        <div v-if="kafs05ModelStep2.beforeAppStatus" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-triangle" class="text-danger m-2" />
+            <div>{{ 'Msg_1557' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
+        </div>
+        <div v-if="kafs05ModelStep2.actualStatus == 3 && kafs05ModelStep2.performanceExcessAtr == 1" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-triangle" class="text-danger m-2" />
+            <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
+        </div>
+        <div v-if="kafs05ModelStep2.actualStatus == 3 && kafs05ModelStep2.performanceExcessAtr == 2" class="border border-danger rounded p-1 mt-2 error-message" role="alert">
+            <fa-font icon="exclamation-circle" class="text-danger m-2" />
+            <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
+        </div>
+    </div>
     <div class="input-container">
         <div class="card card-label">
             <div class="card-header">
@@ -68,6 +82,8 @@
                         v-bind:disabled="!kafs05ModelStep2.enableOvertimeInput" 
                         v-bind:errors="$errors.kafs05ModelStep2.overtimeHours"
                         v-bind:show-error="false"/>
+                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="item.preAppExceedState || item.actualExceedState"><span>{{ 'Msg_1561' | i18n($dt(kafs05ModelStep2.appDate)) }}</span></div>
+                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="kafs05ModelStep2.actualStatus == 1 && item.actualExceedState"><span>{{ 'Msg_1560' | i18n($dt(kafs05ModelStep2.appDate)) }}</span></div>
                 </div>
             </div>
         </div>
