--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
@@ -28,6 +28,32 @@
             </div>
         </div>
     </div>
+    <div>
+        <div v-if="kafs05ModelStep3.beforeAppStatus" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-triangle" class="text-danger m-2" />
+            <div>{{ 'Msg_1557' | i18n(kafs05ModelStep3.appDate) }}</div>
+        </div>
+        <div v-if="hasPreAppError" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-circle" class="text-danger m-2" />
+            <div>{{ 'Msg_1559' | i18n }}</div>
+        </div>
+        <div v-if="kafs05ModelStep3.actualStatus == 3 && kafs05ModelStep3.performanceExcessAtr == 1" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-triangle" class="text-danger m-2" />
+            <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
+        </div>
+        <div v-if="kafs05ModelStep3.actualStatus == 3 && kafs05ModelStep3.performanceExcessAtr == 2" class="border border-danger rounded p-1 mt-2 error-message" role="alert">
+            <fa-font icon="exclamation-circle" class="text-danger m-2" />
+            <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
+        </div>
+        <div v-if="kafs05ModelStep3.actualStatus == 1 && hasActualError && kafs05ModelStep3.performanceExcessAtr == 1" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+            <fa-font icon="exclamation-triangle" class="text-danger m-2" />
+            <div>{{ 'Msg_1558' | i18n }}</div>
+        </div>
+        <div v-if="kafs05ModelStep3.actualStatus == 1 && hasActualError && kafs05ModelStep3.performanceExcessAtr == 2" class="border border-danger rounded p-1 mt-2 error-message" role="alert">
+            <fa-font icon="exclamation-circle" class="text-danger m-2" />
+            <div>{{ 'Msg_1558' | i18n }}</div>
+        </div>
+    </div>
     <div class="input-container">
         <div class="card card-label" v-if="!kafs05ModelStep3.isCreate">
             <div class="card-header">
