--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
@@ -31,7 +31,7 @@
     <div>
         <div v-if="kafs05ModelStep3.beforeAppStatus" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
             <fa-font icon="exclamation-triangle" class="text-danger m-2" />
-            <div>{{ 'Msg_1557' | i18n(kafs05ModelStep3.appDate) }}</div>
+            <div>{{ 'Msg_1557' | i18n($dt(kafs05ModelStep3.appDate)) }}</div>
         </div>
         <div v-if="hasPreAppError" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
             <fa-font icon="exclamation-circle" class="text-danger m-2" />
