--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
@@ -154,7 +154,7 @@
                 <div class="mb-2" v-for="(item, i) of kafs05ModelStep3.overtimeHours">
                     <div class="row">
                         <div class="col-4">
-                            <span class="small-header">{{item.frameName | i18n}}</span>
+                            <span class="small-header-framename">{{item.frameName | i18n}}</span>
                         </div>
                         <div class="col-8">
                             <span v-if="null != item.applicationTime">{{item.applicationTime | timedr}}</span>
