--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/style.scss
@@ -6,6 +6,10 @@
         color: grey;
         font-size: 3.5vw;
     }
+    .small-header-framename{
+        color: grey;
+        font-size: 3.25vw;
+    }
     .display-time{
         color: #406ccc;
         font-size: 3.5vw;
