--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div>
-        <div v-if="kafs05ModelStep2.beforeAppStatus" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
+        <div v-if="kafs05ModelStep2.beforeAppStatus && kafs05ModelStep2.preExcessDisplaySetting == 1" class="border border-warning rounded p-1 mt-2 alarm-message" role="alert">
             <fa-font icon="exclamation-triangle" class="text-danger m-2" />
             <div>{{ 'Msg_1557' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
         </div>
