update for style and bind relationship between parent and children

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
@@ -24,7 +24,15 @@
 	.ui-igtreegrid-expandcell{
 		margin-top: -10px !important;
 	}
-	
+	.ui-iggrid-table {
+		.ui-iggrid-tablebody {
+			tr {
+				td:last-child {
+				  	padding-right: 2px !important;
+				}
+			}
+		}
+	}
 }
 
 .no-selector {
