--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -3032,6 +3032,10 @@ button.nts-switch-button[disabled].selected {
   margin-top: -10px !important;
 }
 
+.ui-treegridview .ui-iggrid-table .ui-iggrid-tablebody tr td:last-child {
+  padding-right: 2px !important;
+}
+
 /* line 32, ../sass/components/_treegridview.scss */
 .no-selector table th:first-child.ui-iggrid-rowselector-class {
   visibility: hidden;
