--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/treegrid/treegrid.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/treegrid/treegrid.xhtml
@@ -52,7 +52,7 @@
 										filter: true }">
 							</table>
 							
-							<table id="treegrid2-limited"
+							<!--  <table id="treegrid2-limited"
 								data-bind="ntsTreeGridView:{
 										width: 1000,
 										height: 250,
@@ -66,7 +66,7 @@
 										enable: true,
 										showCheckBox: false,
 										rows: 5}">
-							</table>
+							</table>-->
 						</div>
 						<div style="float: left">
 							<br />
@@ -78,7 +78,7 @@
 					<div class="cf">
 						<div style="float: left;">
 							<h3>Multi Selection</h3>
-							<div>
+							<!--<div>
 								<div style="width: 390px" data-bind="ntsSearchBox: {label: '検索', targetKey: 'code', mode:'igTree', comId:'treegrid', items: items1, selected: selectedCodes2, selectedKey: 'code', childField: 'childs', fields: ['name', 'code']}" />
 								<div style="display: inline-block;">
 									<table id="treegrid"
@@ -106,7 +106,7 @@
 									type: 'tree', 
 									childDataKey: 'childs'
 								}"></div>
-							</div>
+							</div>-->
 						</div>
 						<div style="float: left">
 							<br />
